# AI-portrait

./: .gitignore  README.md  pyproject.toml
myenv/: pyvenv.cfg
scripts/: export_openapi.py  regenerate_client.sh  resize_test_images.py
site/: client.ts  next.config.ts  package-lock.json  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/app/result/: page.tsx
site/components/: ServerStatusBadge.tsx
src/: db.py  invoke_ai.py  main.py
src/database/: __init__.py  base.py  sqlalchemy_repo.py  sqlite_repo.py
tests/: test_e2e.py
